--- a/dennis/about.html
+++ b/dennis/about.html
@@ -16,38 +16,38 @@
             <div class="col-lg-12">
                 <h2>Our Team</h2>
 
-                <div class="team-member">
+                <div class="team-member" id="proFile1">
                     <img id="frankiesmith" class="profile" src="images/frankiesmith.png">
                     <p class="team-name">Frankie Smith</p>
                     <p class="team-title" >Sponsor</p>
                 </div>
                 
-                <div class="team-member">
+                <div class="team-member" id="proFile2">
                     <img id="donlee" class="profile" src="images/donlee.png">
                     <p class="team-name">Don Lee</p>
                     <p class="team-title">Sponsor</p>
                 </div>
 
 
-                <div class="team-member">
+                <div class="team-member" id="proFile3">
                     <img id="nickgreen" class="profile" src="images/nickgreen.png">
                     <p class="team-name">Nick Brown</p>
                     <p class="team-title">Team Lead</p>
                 </div>
 
-                <div class="team-member">
+                <div class="team-member" id="proFile4">
                     <img id="ninjablack" class="profile" src="images/ninjablack.png">
                     <p class="team-name">Ninja Black</p>
                     <p class="team-title">Developer</p>
                 </div>
 
-                <div class="team-member">
+                <div class="team-member" id="proFile5">
                     <img id="mariasmart" class="profile" src="images/mariasmart.png">
                     <p class="team-name">Maria Smart</p>
                     <p class="team-title">Tester</p>
                 </div>
 
-                <div class="team-member">
+                <div class="team-member" id="proFile6">
                     <img id="lucyluck" class="profile" src="images/lucyluck.png">
                     <p class="team-name">Lucy Luck</p>
                     <p class="team-title">Quality Assurance (QA)</p>
