--- a/Mockup_ovning.html
+++ b/Mockup_ovning.html
@@ -37,6 +37,14 @@
             }
           
             function DisplayResults(props){ // Var resultaten visas baserat på vad man valt i Selectview
+
+                let json = { //Testing med att hämta info till tabellen
+                        "kursnamn":"Webbutveckling",
+                        "kurskod": "IA-2-001 (0)",
+                        "timmar":90,
+                        "period":1
+                    }; 
+
                 return(
                     <div>
                     <br/>
@@ -52,9 +60,9 @@
                             <th>Perioder</th>
                         </tr>
                         <tr>
-                            <td contentEditable="true">Kurs 1</td>
-                            <td contentEditable="true">100h</td>
-                            <td contentEditable="true">1</td>
+                            <td contentEditable="true">{json.kursnamn}</td>
+                            <td contentEditable="true">{json.timmar}h</td>
+                            <td contentEditable="true">{json.period}</td>
                         </tr>
                         <tr>
                             <td contentEditable="true">Kurs 2</td>
