--- a/Mockup_ovning.html
+++ b/Mockup_ovning.html
@@ -73,8 +73,8 @@
                     <table>
                         <thead>
                             <tr>
-                                <th>{json.Personal[0].förnamn}</th>
-                                <th>{json.Personal[0].efternamn}</th>
+                                <th>{json.Personal[0].Förnamn} (exempel)</th>
+                                <th>{json.Personal[0].Efternamn} (exempel)</th>
                                 <th>Placeholder</th>
                             </tr>
                         </thead>
