Search larare functionality added.

--- a/mockup_ovning.html
+++ b/mockup_ovning.html
@@ -74,6 +74,24 @@
                     }       
                  }
                 }
+                function searchLarare() {
+                var input, filter, table, tr, td, i, txtValue;
+                input = document.getElementById("searchInput");
+                filter = input.value.toUpperCase();
+                table = document.getElementById("kurstabel");
+                tr = table.getElementsByTagName("tr");
+                    for (i = 0; i < tr.length; i++) {
+                    td = tr[i].getElementsByTagName("td")[3];
+                        if (td) {
+                     txtValue = td.textContent || td.innerText;
+                             if (txtValue.toUpperCase().indexOf(filter) > -1) {
+                                tr[i].style.display = "";
+                    } else {
+                        tr[i].style.display = "none";
+                    }
+                    }       
+                 }
+                }
             
             class App extends React.Component{
                 constructor(props){
@@ -161,6 +179,7 @@
                                 </tbody>
                             </table>
                             <input type="text" id="searchInput" onKeyUp={search} placeholder="Sök kurser" ></input>
+                            <input type="text" id="searchInputL" onKeyUp={searchLarare} placeholder="Sök kurser" ></input>
                             <button id="send">Skicka!</button>
                         </div> 
                     );
