--- a/kursverktyg.html
+++ b/kursverktyg.html
@@ -179,7 +179,7 @@
                                 </tbody>
                             </table>
                             <input type="text" id="searchInput" onKeyUp={search} placeholder="Sök kurser" ></input>
-                            <input type="text" id="searchInputL" onKeyUp={searchLarare} placeholder="Sök kurser" ></input>
+                            <input type="text" id="searchInputL" onKeyUp={searchLarare} placeholder="Sök larare" ></input>
                             <button id="send">Skicka!</button>
                         </div> 
                     );
