Ändrade tabell kolumn namn

--- a/kursverktyg.html
+++ b/kursverktyg.html
@@ -166,8 +166,8 @@
                             <table contenteditable="true" spellcheck="false" id="kurstabel">
                                 <thead>
                                     <tr>
-                                        <th>{this.state.Person.Förnamn} (exempel)</th>
-                                        <th>{this.state.Person.Efternamn} (exempel)</th>
+                                        <th>{this.state.Person.Förnamn}{" "}{this.state.Person.Efternamn} </th>
+                                        <th>Timmar</th>
                                         <th>Period</th>
                                         <th>Assigned to</th>
                                         <th></th>
