--- a/mockup_ovning.html
+++ b/mockup_ovning.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" type="text/css" href="main.css" />
     </head>
     <body>
-            
+        <div id="Container">    
         <div id="demo">Ursprunglig text</div>
         <script type="text/babel">
             function loopLarare(props) {
@@ -191,5 +191,6 @@
                 document.getElementById("demo") 
             );
         </script>
+        </div> <!--end of container div -->
     </body>
 </html>
